# depositor-bot

./: .env.test  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml  deploy.sh
interfaces/: NodeOperatorRegistry.json
scripts/: delegator.py  depositor.py  distributor.py
scripts/delegator_utils/: delegator_bot.py
scripts/depositor_utils/: depositor_bot.py  errors.py
scripts/distributor_utils/: distributor_bot.py
scripts/utils/: constants.py  interfaces.py  metrics.py  variables.py
tests/: test_depositor_bot.py
tests/fixtures/: common_fixtures.py  depositor_fixtures.py  pytest_fixtures.py
