[tool.poetry]
name = "depositor"
version = "0.1.0"
description = ""
authors = ["idirall22 <26064387+idirall22@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
eth-brownie = "^1.19.3"
flask = "^2.3.2"
numpy = "^1.24.3"
prometheus-client = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
